[package]
name = "tera"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <steve@gigamono.com>"]
description = "A capabilities-based secure JavaScript runtime"
readme = "README.md"
repository = "https://github.com/gigamono/tera"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/tera"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
v8 = "0.33.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "test"
path = "bin/test.rs"

[lib]
name = "tera"
path = "lib/lib.rs"
